tests/misc_errors/attrs.out
error: attrs.li 1,1: cannot use attributes here
    1 | #[attr]
      | ^^^^^^^
error: attrs.li 4,1: cannot use attributes here
    4 | #[attr]
      | ^^^^^^^
warning: attrs.li 7,1: unknown attribute `abc`
    7 | #[abc]
      | ^^^^^^
